# OpenGL_Mirror

./: .gitignore  .gitmodules  CMakeLists.txt  Context.cpp  Context.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  README.md  Scene.cpp  Scene.hpp  Triangle.cpp  Triangle.hpp  main.cpp
assets/: axis.mtl  base.frag  base.vert  cube.mtl  reflection.frag  reflection.vert  shadow.vert
glad/include/glad/: glad.h
glad/src/: glad.c
utility/: conversion.hpp  io.cpp  io.hpp  offset_of.hpp
utility/gl/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  gl.cpp  gl.hpp
